--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -1,9 +1,9 @@
 name: base2e15
 description: >
   binary-to-text encoding schemes that represent binary data in an unicode string format, each unicode character represent 15 bits of binary data.
-version: 0.1.0
-#author: Rick Zhou <rinick@gmail.com>
-#homepage: https://github.com/rinick/base2e15
+version: 0.1.1
+author: Rick Zhou <rinick@gmail.com>
+homepage: https://github.com/rinick/base2e15
 #dependencies:
 #dev_dependencies:
 #  unittest: any
